@@ -33,6 +33,8 @@ Copyright_License {
 
 #ifdef KOBO
 
+#include <sys/mount.h>
+
 static bool
 InsMod(const char *path)
 {
@@ -174,6 +176,10 @@ void
 KoboRunTelnetd()
 {
 #ifdef KOBO
+  /* telnetd requires /dev/pts - mount it (if it isn't already) */
+  if (mkdir("/dev/pts", 0777) == 0)
+    mount("none", "/dev/pts", "devpts", MS_RELATIME, NULL);
+
   Run("/usr/sbin/telnetd", "-l", "/bin/sh");
 #endif
 }
